tests/should_fail/match_int_pattern_on_string.nv
module test
// match: Int literal pattern on String type
fn bad(s: String) -> Int {
    return match s {
        42 => 1,
        _  => 0
    }
}
